--- a/package.json
+++ b/package.json
@@ -17,23 +17,37 @@
   },
   "homepage": "https://github.com/Waserman/todo-list#readme",
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "file-loader": "^1.1.5",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.7",
     "normalize.css": "^7.0.0",
+    "open": "0.0.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
-    "thunk": "0.0.1"
+    "style-loader": "^0.19.1",
+    "thunk": "0.0.1",
+    "url-loader": "^0.6.2",
+    "webpack-dev-middleware": "^2.0.1",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "devDependencies": {
     "cross-env": "^5.1.1",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.10.0"
   }
 }
